--- a/src/main/resources/happytravel.properties
+++ b/src/main/resources/happytravel.properties
@@ -1,11 +1,6 @@
 # \ud30c\uc77c \uc5c5\ub85c\ub4dc \uacbd\ub85c \uc124\uc815
-fileUpload.rootPath=/Volumes/DDisc/FileRepository
-fileUpload.empimgPath=/empimg/
-fileUpload.virtualRootPath=/FileRepository
-fileUpload.noticePath=notice
-fileUpload.roomimage=roomimage
-fileUpload.accimgPath=/accimg/
-
+IDPhoto.rootPath=Y:\\happytravel
+IDPhoto.subPath=IDPhoto
 
 # \uc138\uae08 \uacc4\uc0b0
 emp.rate.natps=0.045
