--- a/src/main/resources/happytravel.properties
+++ b/src/main/resources/happytravel.properties
@@ -29,3 +29,5 @@ cop.copnum=123-56-12345
 cop.addr=\uc0ac\uc6b8\uc2dc \uc11c\ucd08\uad6c \uc11c\ucd08\ub3d9 123-45
 cop.emp=\ud64d\uae38\ub3d9
 cop.tel=02-345-6543
+
+firebase.config.path=/path/to/serviceAccountKey.xml
