--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,4 @@ src/main/webapp/WEB-INF/web.xml
 .idea
 
 # Firebase Storage 민감한 정보 파일 무시
-src/main/resources/serviceAccountKey.json
+src/main/resources/serviceAccountKey.xml
