--- a/src/main/resources/happytravel.properties
+++ b/src/main/resources/happytravel.properties
@@ -1,7 +1,6 @@
 # \ud30c\uc77c \uc5c5\ub85c\ub4dc \uacbd\ub85c \uc124\uc815
-IDPhoto.rootPath=Y:
+IDPhoto.rootPath=sharefolder
 IDPhoto.mainPath=happytravel
-IDPhoto.rootPath_mac=smb://server/sharefolder/happytravels
 IDPhoto.subPath=IDPhoto
 
 # \uc138\uae08 \uacc4\uc0b0
